# megamol-prolint-InVADo

./: .gitignore  Readme.md  appveyor.yml
configurator/MegaMolConf/: Form1.cs  MegaMolInstanceInfo.cs  ObservingDict.cs
configurator/MegaMolConf/Connection/: ParameterTypeUtility.cs
configurator/MegaMolConf/Io/: ProjectFileLua.cs
configurator/MegaMolConf/Properties/: Resources.Designer.cs
console/src/: UILayersCollection.hpp
plugins/molecularmaps/: CMakeLists.txt
plugins/prolint/: CMakeLists.txt  dockingConfig.mmprj  getChemPropsIntoCheckmol.py  getFunctionalGroupData.py  getProteinLigand_Interactions.py  getSMItoSVG.py  get_InVADo_InstallData.cmd  requirements.txt
plugins/prolint/Resources/: Pocket.afdesign
plugins/prolint/Shaders/: circleBillboardShader.btf  cone.btf  cylinder.btf  dodecahedronShader.btf  prolint-ses.btf  prolint.btf  simpleAmbientShader.btf  sphereShaderGeo.btf
plugins/prolint/include/prolint/: prolint.h
plugins/prolint/server/: app.py  build_app.cmd  fgcodes.txt  functional_group_classifications  run_app.cmd
plugins/prolint/server/vue_app/: package-lock.json  package.json  vue.config.js
plugins/prolint/server/vue_app/public/: index.html
plugins/prolint/server/vue_app/src/: App.vue  main.js
plugins/prolint/server/vue_app/src/assets/css/: clusterStyles.css  functionalGroupChart.css  heatmapStyles.css  indexStyles.css  ligandStyles.css  main_css.css  tooltipComponent.css
plugins/prolint/server/vue_app/src/assets/js/: cluster.js  fgClassifications.js  funcGroupLookUp.js  functionalGroupChart.js  heatmap.js  ligand.js  sampleJS.js
plugins/prolint/server/vue_app/src/assets/md/: ClusterView.md  DockingOverview.md  DockingOverview_Heatmap.md  DockingOverview_LigandBars.md  Functional_Groups_TreeView.md  LigandView.md  threeD_VisControls.md
plugins/prolint/server/vue_app/src/components/: clusterFuncGroupsComponent.vue  clusterStatsComponent.vue  clustersComponent.vue  clustersLigandView.vue  componentUtils.js  heatmapComponent.vue  infoOverlayComponent.vue  ligandComponent.vue  navDrawer.vue  tooltipPLIPComponent.vue  tooltipSkeletalFormulaComponent.vue
plugins/prolint/server/vue_app/src/plugins/: vuetify.js
plugins/prolint/src/: FFRNNS.cpp  FFRNNS.cu  FFRNNS.cuh  FFRNNS.h  LigandModelCall.cpp  LigandModelCall.h  LigandModelSelector.cpp  LigandModelSelector.h  ModelClusterRenderer.cpp  ModelClusterRenderer.cu  ModelClusterRenderer.cuh  ModelClusterRenderer.h  MouseInputCall.h  MultiPDBQTLoader.cpp  MultiPDBQTLoader.h  SESMeshRenderer.cpp  SESMeshRenderer.h  SESTrilaterationCUDA.cu  SESTrilaterationCUDA.cuh  SESTrilaterationCUDARenderer.cpp  SESTrilaterationCUDARenderer.h  SocketCommunicationManager.cpp  SocketCommunicationManager.h  View3DMouse.cpp  View3DMouse.h  functionalGroupHandler.cpp  functionalGroupHandler.h  prolint.cpp  stdafx.h
plugins/protein/include/protein/: Color.h  PDBLoader.h
plugins/protein/src/: BindingSiteDataSource.cpp  CCP4VolumeData.h  CartoonRenderer.cpp  CartoonRenderer.h  FrodockLoader.h  GLSLVolumeRenderer.cpp  GLSLVolumeRenderer.h  GROLoader.h  MDDriverConnector.cpp  MSMSGenus0Generator.cpp  MSMSMeshLoader.cpp  MolecularBezierData.cpp  MoleculeCartoonRenderer.cpp  MoleculeCartoonRenderer.h  MoleculeSESRenderer.cpp  MoleculeSESRenderer.h  MultiPDBLoader.cpp  PDBLoader.cpp  Protein.cpp  ProteinVolumeRenderer.cpp  ProteinVolumeRenderer.h  SequenceRenderer.cpp  SimpleMoleculeRenderer.cpp  SimpleMoleculeRenderer.h  SolventHydroBondGenerator.h  SolventVolumeRenderer.cpp  SolventVolumeRenderer.h  Stride.cpp
plugins/protein_calls/include/protein_calls/: CallMouseInput.h
vislib/include/vislib/math/: AbstractVector.h
